--- a/assets/main.css
+++ b/assets/main.css
@@ -7,6 +7,31 @@
   @apply opacity-0;
 }
 
+.section-enter-active, .section-leave-active {
+  transition: all 0.5s;
+}
+.section-enter/*, .section-leave-to */ {
+  /* opacity: 0; */
+  transform: translateY(100%);
+}
+
+.section-reverse-enter-active, .section-reverse-leave-active {
+  transition: all 0.5s;
+}
+.section-reverse-enter/*, .section-leave-to */ {
+  /* opacity: 0; */
+  transform: translateY(-100%);
+}
+
+.slider-enter-active, .slider-leave-active {
+  transition: all 1s;
+  scale: 1;
+}
+.slider-enter, .slider-leave-to {
+  opacity: 0;
+  transform: scale(0.99);
+}
+
 .nuxt-link-exact-active {
   /*  */
 }
