--- a/assets/main.css
+++ b/assets/main.css
@@ -12,6 +12,15 @@ body {
   @apply opacity-0;
 }
 
+.slide-up-enter-active, .slide-up-leave-active {
+  transition: all 0.75s;
+}
+
+.slide-up-enter, .slide-up-leave-to {
+  opacity: 0;
+  transform: translateY(100%);
+}
+
 .section-enter-active, .section-leave-active {
   transition: all 0.75s;
 }
