--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 16px;
+}
+
 body {
   background: #fff;
 }
@@ -75,4 +79,10 @@ body {
 }
 .scrollbars::-webkit-scrollbar-thumb {
   background-color: #111;
+}
+
+@media screen and (min-width: 3840px) {
+  html {
+    font-size: 32px;
+  }
 }
