--- a/assets/main.css
+++ b/assets/main.css
@@ -78,6 +78,18 @@ html {
   background-color: #111;
 }
 
+@media screen and (min-width: 1366px) {
+  html {
+    font-size: 11.3px;
+  }
+}
+
+@media screen and (min-width: 2048px) {
+  html {
+    font-size: 17.06px;
+  }
+}
+
 @media screen and (min-width: 3840px) {
   html {
     font-size: 30px;
